--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-
+  font_awesome_flutter: ^10.7.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -53,6 +52,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  assets:
+    - assets/logos/Logo_fin.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
